--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Documentossss</title>
@@ -141,5 +141,6 @@
     }
   </script>
 </body>
+
 
 </html>
