--- a/pagec2.html
+++ b/pagec2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../style/style2.css">
+  <link rel="stylesheet" href="/style/style2.css">
   <title>paginmotatatatata</title>
 </head>
 
@@ -116,5 +116,6 @@
     }
   </script>
 </body>
+
 
 </html>
