--- a/pagec3.html
+++ b/pagec3.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../style/style3.css">
+  <link rel="stylesheet" href="/style/style3.css">
   <title>paginmotatatatata</title>
 </head>
 
@@ -41,5 +41,6 @@
   <!--BOTON DE REGRESO PAGINA1-->
   <a class="backup" href="index.html"><img src="img/hogar.png" width="50px"></a>
 </body>
+
 
 </html>
